work for the https://github.com/surveyjs/survey-library/issues/8460

--- a/tests/markup/snapshots/checkbox-comment-V2.snap.html
+++ b/tests/markup/snapshots/checkbox-comment-V2.snap.html
@@ -1,8 +1,8 @@
-<fieldset aria-invalid="false" aria-label="name" aria-required="false" class="sd-selectbase" role="listbox">
+<fieldset aria-invalid="false" aria-label="name" class="sd-selectbase" role="group">
 	<legend class="sv-hidden">name</legend>
 	<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sv-q-col-1" role="presentation">
 		<label class="sd-selectbase__label">
-			<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_0" name="nameitem1" role="option" type="checkbox" value="item1">
+			<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_0" name="nameitem1" type="checkbox" value="item1">
 			<span class="sd-checkbox__decorator sd-item__decorator">
 				<svg class="sd-checkbox__svg sd-item__svg">
 					<use xlink:href="#icon-v2check" class="">
@@ -19,6 +19,6 @@
 	<div>
 		<span class="sv-string-viewer">Other (describe)</span>
 	</div>
-	<textarea aria-label="name" aria-required="false" class="sd-comment sd-input sd-selectbase__other" id="testid0_comment" placeholder="" style="resize:both;">
+	<textarea aria-label="name" class="sd-comment sd-input sd-selectbase__other" id="testid0_comment" placeholder="" style="resize:both;">
 	</textarea>
 </div>
