--- a/tests/markup/snapshots/checkbox-other-maxlength.snap.html
+++ b/tests/markup/snapshots/checkbox-other-maxlength.snap.html
@@ -1,15 +1,15 @@
-<fieldset aria-invalid="false" aria-label="name" aria-required="false" class="sv_qcbc sv_qcbx" role="listbox">
+<fieldset aria-invalid="false" aria-label="name" class="sv_qcbc sv_qcbx" role="group">
 	<legend class="sv-hidden">name</legend>
 	<div class="checked sv_q_checkbox sv-q-col-1" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input checked="" class="sv_q_checkbox_control_item" id="testid0i_0" name="nameother" role="option" type="checkbox" value="other">
+			<input checked="" class="sv_q_checkbox_control_item" id="testid0i_0" name="nameother" type="checkbox" value="other">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">Other (describe)</span>
 			</span>
 		</label>
 	</div>
 	<div class="form-group">
-		<textarea aria-label="name" aria-required="false" class="sv_q_checkbox_other sv_q_other" id="testid0_other" maxlength="15" placeholder="" style="resize:both;">
+		<textarea aria-label="name" class="sv_q_checkbox_other sv_q_other" id="testid0_other" maxlength="15" placeholder="" style="resize:both;">
 		</textarea>
 	</div>
 </fieldset>
