--- a/tests/markup/snapshots/checkbox-columns.snap.html
+++ b/tests/markup/snapshots/checkbox-columns.snap.html
@@ -1,10 +1,10 @@
-<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc sv_qcbx" role="listbox">
+<fieldset aria-invalid="false" aria-label="Question title" class="sv_qcbc sv_qcbx" role="group">
 	<legend class="sv-hidden">Question title</legend>
 	<div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_checkbox" role="presentation">
 				<label class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_0" name="nameitem1" role="option" type="checkbox" value="item1">
+					<input class="sv_q_checkbox_control_item" id="testid0i_0" name="nameitem1" type="checkbox" value="item1">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">item1</span>
 					</span>
@@ -14,7 +14,7 @@
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_checkbox" role="presentation">
 				<label class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_1" name="nameitem2" role="option" type="checkbox" value="item2">
+					<input class="sv_q_checkbox_control_item" id="testid0i_1" name="nameitem2" type="checkbox" value="item2">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">item2</span>
 					</span>
