--- a/tests/markup/snapshots/checkbox-row-head-foot.snap.html
+++ b/tests/markup/snapshots/checkbox-row-head-foot.snap.html
@@ -1,8 +1,8 @@
-<fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc sv_qcbx" role="listbox">
+<fieldset aria-invalid="false" aria-label="Question title" class="sv_qcbc sv_qcbx" role="group">
 	<legend class="sv-hidden">Question title</legend>
 	<div class="sv_q_checkbox sv_q_checkbox_inline sv_q_checkbox_selectall" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_0" name="nameselectall" role="option" type="checkbox" value="">
+			<input class="sv_q_checkbox_control_item" id="testid0i_0" name="nameselectall" type="checkbox" value="">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">Select All</span>
 			</span>
@@ -11,7 +11,7 @@
 	<div>
 		<div class="sv_q_checkbox sv_q_checkbox_inline" role="presentation">
 			<label class="sv_q_checkbox_label">
-				<input class="sv_q_checkbox_control_item" id="testid0i_1" name="nameitem1" role="option" type="checkbox" value="item1">
+				<input class="sv_q_checkbox_control_item" id="testid0i_1" name="nameitem1" type="checkbox" value="item1">
 				<span class="sv_q_checkbox_control_label">
 					<span class="sv-string-viewer">item1</span>
 				</span>
@@ -19,7 +19,7 @@
 		</div>
 		<div class="sv_q_checkbox sv_q_checkbox_inline" role="presentation">
 			<label class="sv_q_checkbox_label">
-				<input class="sv_q_checkbox_control_item" id="testid0i_2" name="nameitem2" role="option" type="checkbox" value="item2">
+				<input class="sv_q_checkbox_control_item" id="testid0i_2" name="nameitem2" type="checkbox" value="item2">
 				<span class="sv_q_checkbox_control_label">
 					<span class="sv-string-viewer">item2</span>
 				</span>
@@ -28,7 +28,7 @@
 	</div>
 	<div class="sv_q_checkbox sv_q_checkbox_inline sv_q_checkbox_none" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_3" name="namenone" role="option" type="checkbox" value="none">
+			<input class="sv_q_checkbox_control_item" id="testid0i_3" name="namenone" type="checkbox" value="none">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">None</span>
 			</span>
@@ -36,7 +36,7 @@
 	</div>
 	<div class="sv_q_checkbox sv_q_checkbox_inline" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_4" name="nameother" role="option" type="checkbox" value="other">
+			<input class="sv_q_checkbox_control_item" id="testid0i_4" name="nameother" type="checkbox" value="other">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">Other (describe)</span>
 			</span>
