--- a/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
@@ -53,7 +53,7 @@
 							<legend class="sv-hidden">row row1, column col2</legend>
 							<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
 								<label class="sd-selectbase__label">
-									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row1cell3i_0" name="col2Item 1" required="true" type="checkbox" value="Item 1">
+									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row1cell3i_0" name="col2Item 1" required="" type="checkbox" value="Item 1">
 									<span class="sd-checkbox__decorator sd-item__decorator">
 										<svg class="sd-checkbox__svg sd-item__svg">
 											<use xlink:href="#icon-v2check" class="">
@@ -67,7 +67,7 @@
 							</div>
 							<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
 								<label class="sd-selectbase__label">
-									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row1cell3i_1" name="col2Item 2" required="true" type="checkbox" value="Item 2">
+									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row1cell3i_1" name="col2Item 2" required="" type="checkbox" value="Item 2">
 									<span class="sd-checkbox__decorator sd-item__decorator">
 										<svg class="sd-checkbox__svg sd-item__svg">
 											<use xlink:href="#icon-v2check" class="">
