--- a/tests/markup/snapshots/list-component-with-subitems.snap.html
+++ b/tests/markup/snapshots/list-component-with-subitems.snap.html
@@ -14,7 +14,7 @@
 								<span class="sv-string-viewer">text1</span>
 							</div>
 						</li>
-						<li aria-selected="false" class="sv-list__item" role="option" tabindex="0">
+						<li aria-selected="false" class="sv-list__item sv-list__item--group" role="option" tabindex="0">
 							<div class="sv-list__item-body" style="padding-inline-start:16px;" title="text2">
 								<span class="sv-string-viewer">text2</span>
 								<svg class="sv-list-item__marker-icon sv-svg-icon" role="img" style="height:16px; width:16px;">
