Added localization to test pages

--- a/examples_test/defaultV2/jquery-ui.html
+++ b/examples_test/defaultV2/jquery-ui.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../build/survey-jquery-ui/defaultV2.min.css" />
 
     <script src="../../build/survey-core/survey.core.min.js"></script>
+    <script src="../../build/survey-core/i18n/index.min.js"></script>
     <script src="../../build/survey-jquery-ui/survey-jquery-ui.min.js"></script>
   </head>
   <body>
