--- a/examples_test/default/jquery-ui.html
+++ b/examples_test/default/jquery-ui.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../build/survey-jquery-ui/survey.min.css" />
 
     <script src="../../build/survey-core/survey.core.min.js"></script>
+    <script src="../../build/survey-core/i18n/index.min.js"></script>
     <script src="../../build/survey-core/plugins/bootstrap-integration.js"></script>
     <script src="../../build/survey-jquery-ui/survey-jquery-ui.min.js"></script>
     <script src="./index.js"></script>
