--- a/examples_test/defaultV2/survey-ui.html
+++ b/examples_test/defaultV2/survey-ui.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.6.4/showdown.min.js"></script>
 
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"/>
-    
+    <link rel="stylesheet" href="../../build/survey-core/defaultV2.min.css" />
+
     <script src="../../build/survey-core/survey.core.min.js"></script>
     <script src="../../build/survey-core/i18n/index.min.js"></script>
-    <script src="../../build/survey-core/plugins/bootstrap-integration.js"></script>
-    <script src="../../build/survey-jquery-ui/survey-jquery-ui.min.js"></script>
+    <script src="../../build/survey-ui/survey-ui.min.js"></script>
   </head>
   <body>
     <div id="surveyElement"></div>
