--- a/examples_test/modern/jquery-ui.html
+++ b/examples_test/modern/jquery-ui.html
@@ -6,9 +6,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.6.4/showdown.min.js"></script>
 
-    <link rel="stylesheet" href="../../build/survey-jquery-ui/modern.min.css" />
+    <link rel="stylesheet" href="../../build/survey-core/modern.min.css" />
 
     <script src="../../build/survey-core/survey.core.min.js"></script>
+    <script src="../../build/survey-core/i18n/index.min.js"></script>
     <script src="../../build/survey-jquery-ui/survey-jquery-ui.min.js"></script>
   </head>
   <body>
