--- a/examples_test/modern/survey-ui.html
+++ b/examples_test/modern/survey-ui.html
@@ -6,12 +6,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.6.4/showdown.min.js"></script>
 
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"/>
-    
+    <link rel="stylesheet" href="../../build/survey-core/modern.min.css" />
+
     <script src="../../build/survey-core/survey.core.min.js"></script>
     <script src="../../build/survey-core/i18n/index.min.js"></script>
-    <script src="../../build/survey-core/plugins/bootstrap-integration.js"></script>
-    <script src="../../build/survey-jquery-ui/survey-jquery-ui.min.js"></script>
+    <script src="../../build/survey-ui/survey-ui.min.js"></script>
   </head>
   <body>
     <div id="surveyElement"></div>
