--- a/examples_test/defaultV2/react.html
+++ b/examples_test/defaultV2/react.html
@@ -6,8 +6,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.6.4/showdown.min.js"></script>
     <script src="https://unpkg.com/react@latest/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js"></script>
-    <link rel="stylesheet" href="../../build/survey-react/defaultV2.min.css" />
-    <script src="../../build/survey-react/survey.react.min.js"></script>
+    <!-- <link rel="stylesheet" href="../../build/survey-core/survey.min.css" /> -->
+    <!-- <link rel="stylesheet" href="../../build/survey-core/modern.min.css" /> -->
+    <link rel="stylesheet" href="../../build/survey-core/defaultV2.min.css" />
+    <script src="../../build/survey-core/survey.core.min.js"></script>
+    <script src="../../build/survey-react-ui/survey-react-ui.min.js"></script>
   </head>
   <body>
     <div id="surveyElement"></div>
