add     <script src="../../build/survey-core/survey.i18n.min.js"></script>

--- a/examples_test/defaultV2/react.html
+++ b/examples_test/defaultV2/react.html
@@ -10,6 +10,7 @@
     <!-- <link rel="stylesheet" href="../../build/survey-core/modern.min.css" /> -->
     <link rel="stylesheet" href="../../build/survey-core/defaultV2.min.css" />
     <script src="../../build/survey-core/survey.core.min.js"></script>
+    <script src="../../build/survey-core/survey.i18n.min.js"></script>
     <script src="../../build/survey-react-ui/survey-react-ui.min.js"></script>
   </head>
   <body>
