--- a/examples_test/customWidget/react.html
+++ b/examples_test/customWidget/react.html
@@ -16,6 +16,7 @@
     <!-- <link rel="stylesheet" href="../../build/survey-core/modern.min.css" /> -->
     <!-- <link rel="stylesheet" href="../../build/survey-core/defaultV2.min.css" /> -->
     <script src="../../build/survey-core/survey.core.min.js"></script>
+    <script src="../../build/survey-core/survey.i18n.min.js"></script>
     <script src="../../build/survey-react-ui/survey-react-ui.min.js"></script>
   <!-- <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">     -->
 
