add no-imports-from-entries rule (#8548)
* add no-imports-from-entries rule

* Fixed react-ui build and moved tests to react-ui

* Fixed lint

* Re-fixed lint

* Try to fix react-ui tests

* update package.json

* add     <script src="../../build/survey-core/survey.i18n.min.js"></script>

* Try to fix f-tests

* Try to fix tests

* Try to fix builds

* Try to fix builds

---------

Co-authored-by: OlgaLarina <olga.larina.dev@gmail.com>
Co-authored-by: tsv2013 <tsv2013@noreply.github.com>

--- a/examples_test/customWidget/react.html
+++ b/examples_test/customWidget/react.html
@@ -12,8 +12,12 @@
   <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/globalize/0.1.1/globalize.min.js"></script>
   <script type="text/javascript" src="http://cdn3.devexpress.com/jslib/15.1.5/js/dx.chartjs.js"></script>
 
-  <script src="../../build/survey-react/survey.react.min.js"></script>
-  <link rel="stylesheet" href="../../build/survey-react/survey.min.css" />
+    <link rel="stylesheet" href="../../build/survey-core/survey.min.css" />
+    <!-- <link rel="stylesheet" href="../../build/survey-core/modern.min.css" /> -->
+    <!-- <link rel="stylesheet" href="../../build/survey-core/defaultV2.min.css" /> -->
+    <script src="../../build/survey-core/survey.core.min.js"></script>
+    <script src="../../build/survey-core/survey.i18n.min.js"></script>
+    <script src="../../build/survey-react-ui/survey-react-ui.min.js"></script>
   <!-- <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">     -->
 
   <!-- custom widgets -->
