--- a/examples_test/bootstrap/react.html
+++ b/examples_test/bootstrap/react.html
@@ -5,7 +5,13 @@
     <script src="https://unpkg.com/react@latest/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"/>
-    <script src="../../build/survey-react/survey.react.min.js"></script>
+    <!-- <link rel="stylesheet" href="../../build/survey-core/survey.min.css" /> -->
+    <!-- <link rel="stylesheet" href="../../build/survey-core/modern.min.css" /> -->
+    <!-- <link rel="stylesheet" href="../../build/survey-core/defaultV2.min.css" /> -->
+    <script src="../../build/survey-core/survey.core.min.js"></script>
+    <script src="../../build/survey-core/survey.i18n.min.js"></script>
+    <script src="../../build/survey-core/plugins/bootstrap-integration.min.js"></script>
+    <script src="../../build/survey-react-ui/survey-react-ui.min.js"></script>
   </head>
   <body>
     <div id="surveyElement"></div>
