--- a/examples_test/modern/react.html
+++ b/examples_test/modern/react.html
@@ -4,8 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script src="https://unpkg.com/react@latest/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js"></script>
-    <link rel="stylesheet" href="../../build/survey-react/modern.min.css"/>
-    <script src="../../build/survey-react/survey.react.min.js"></script>
+    <!-- <link rel="stylesheet" href="../../build/survey-core/survey.min.css" /> -->
+    <link rel="stylesheet" href="../../build/survey-core/modern.min.css" />
+    <!-- <link rel="stylesheet" href="../../build/survey-core/defaultV2.min.css" /> -->
+    <script src="../../build/survey-core/survey.core.min.js"></script>
+    <script src="../../build/survey-core/survey.i18n.min.js"></script>
+    <script src="../../build/survey-react-ui/survey-react-ui.min.js"></script>
     <script src="./index.js"></script>
   </head>
   <body>
