textarea component enhancement

--- a/tests/markup/snapshots/checkbox-comment-V2.snap.html
+++ b/tests/markup/snapshots/checkbox-comment-V2.snap.html
@@ -19,6 +19,6 @@
 	<div>
 		<span class="sv-string-viewer">Other (describe)</span>
 	</div>
-	<textarea aria-label="name" class="sd-comment sd-input sd-selectbase__other" id="testid0_comment" placeholder="" style="resize:both;">
+	<textarea aria-label="name" class="sd-comment sd-input" id="testid0_comment" placeholder="" style="resize:both;">
 	</textarea>
 </div>
