--- a/tests/markup/snapshots/comment-into-question-commentAreaRows.snap.html
+++ b/tests/markup/snapshots/comment-into-question-commentAreaRows.snap.html
@@ -40,6 +40,6 @@
 	<div>
 		<span class="sv-string-viewer">Other (describe)</span>
 	</div>
-	<textarea aria-label="name" aria-required="false" class="sv_q_other sv_q_radiogroup_other" id="testid0_comment" placeholder="" rows="3" style="resize:both;">
+	<textarea aria-label="name" aria-required="false" id="testid0_comment" placeholder="" rows="3" style="resize:both;">
 	</textarea>
 </div>
