--- a/examples_test/defaultV2/survey-js-ui.html
+++ b/examples_test/defaultV2/survey-js-ui.html
@@ -5,7 +5,11 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.6.4/showdown.min.js"></script>
-
+    <style >
+      *, ::after, ::before {
+        box-sizing: border-box;
+      }
+    </style>
     <link rel="stylesheet" href="../../build/survey-core/defaultV2.min.css" />
 
     <script src="../../build/survey-core/survey.core.min.js"></script>
