--- a/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
@@ -17,7 +17,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row1">
+			<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row0">
 				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" title="">
 					<span class="sv-string-viewer">row1</span>
 				</td>
@@ -28,10 +28,10 @@
 						<span class="sv-string-viewer sv-string-viewer--multiline">col1</span>
 					</span>
 					<div class="sd-table__question-wrapper">
-						<fieldset aria-invalid="false" aria-label="row row1, column col1" aria-required="true" class="sd-selectbase sd-selectbase--row" role="radiogroup">
+						<fieldset aria-invalid="false" aria-label="row row1, column col1" aria-required="true" class="sd-selectbase sd-selectbase--mobile sd-selectbase--row" role="radiogroup">
 							<div class="sd-item sd-item--allowhover sd-radio sd-radio--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
 								<label class="sd-selectbase__label">
-									<input class="sd-item__control sd-radio__control sd-visuallyhidden" id="testid0row1cell1i_0" name="col1_testid0row1cell1" type="radio" value="Item 1">
+									<input class="sd-item__control sd-radio__control sd-visuallyhidden" id="testid0row0cell2i_0" name="col1_testid0row0cell2" type="radio" value="Item 1">
 									<span class="sd-item__decorator sd-radio__decorator">
 									</span>
 									<span class="sd-item__control-label">
@@ -49,11 +49,11 @@
 						<span class="sv-string-viewer sv-string-viewer--multiline">col2</span>
 					</span>
 					<div class="sd-table__question-wrapper">
-						<fieldset aria-invalid="false" aria-label="row row1, column col2" class="sd-selectbase sd-selectbase--row" role="group">
+						<fieldset aria-invalid="false" aria-label="row row1, column col2" class="sd-selectbase sd-selectbase--mobile sd-selectbase--row" role="group">
 							<legend class="sv-hidden">row row1, column col2</legend>
 							<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
 								<label class="sd-selectbase__label">
-									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row1cell3i_0" name="col2Item 1" required="" type="checkbox" value="Item 1">
+									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row0cell4i_0" name="col2Item 1" required="" type="checkbox" value="Item 1">
 									<span class="sd-checkbox__decorator sd-item__decorator">
 										<svg class="sd-checkbox__svg sd-item__svg">
 											<use xlink:href="#icon-v2check" class="">
@@ -67,7 +67,7 @@
 							</div>
 							<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
 								<label class="sd-selectbase__label">
-									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row1cell3i_1" name="col2Item 2" required="" type="checkbox" value="Item 2">
+									<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0row0cell4i_1" name="col2Item 2" required="" type="checkbox" value="Item 2">
 									<span class="sd-checkbox__decorator sd-item__decorator">
 										<svg class="sd-checkbox__svg sd-item__svg">
 											<use xlink:href="#icon-v2check" class="">
