--- a/examples/knockout/bootstrap-material/index.html
+++ b/examples/knockout/bootstrap-material/index.html
@@ -16,7 +16,7 @@
     <script src="../../../build/survey-knockout/survey.ko.js"></script>
 </head>
 
-<body>
+<body spellscheck="false">
     <div id="surveyElement">
     </div>
     <script src="./index.js"></script>
