--- a/examples/knockout/customWidget.html
+++ b/examples/knockout/customWidget.html
@@ -46,7 +46,7 @@
     <script src="https://unpkg.com/surveyjs-widgets/surveyjs-widgets.js"></script>
   </head>
 
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
     <script src="./index.js"></script>
