--- a/examples/vue/customWidget.html
+++ b/examples/vue/customWidget.html
@@ -51,7 +51,7 @@
     <script src="https://unpkg.com/surveyjs-widgets/surveyjs-widgets.js"></script>
   </head>
 
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement">
       <survey :survey="survey" />
     </div>
