--- a/examples_test/bootstrap/knockout.html
+++ b/examples_test/bootstrap/knockout.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"/>
     <script src="../../build/survey-knockout/survey.ko.min.js"></script>
   </head>
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
