--- a/examples_test/customWidget/vue.html
+++ b/examples_test/customWidget/vue.html
@@ -35,7 +35,7 @@
   <script src="./index.js"></script>
 </head>
 
-<body>
+<body spellscheck="false">
   <div id="surveyElement">
     <survey :survey="survey" />
   </div>
