--- a/examples_test/defaultV2/survey-js-ui.html
+++ b/examples_test/defaultV2/survey-js-ui.html
@@ -16,7 +16,7 @@
     <script src="../../build/survey-core/i18n/index.min.js"></script>
     <script src="../../build/survey-js-ui/survey-js-ui.min.js"></script>
   </head>
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
