--- a/examples/jquery/customWidget.html
+++ b/examples/jquery/customWidget.html
@@ -47,7 +47,7 @@
     <script src="https://unpkg.com/surveyjs-widgets/surveyjs-widgets.js"></script>
   </head>
 
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
     <script src="./index.js"></script>
