--- a/examples_test/bootstrap/vue.html
+++ b/examples_test/bootstrap/vue.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"/>
     <script src="../../build/survey-vue/survey.vue.min.js"></script>
   </head>
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
