--- a/examples_test/customWidget/react.html
+++ b/examples_test/customWidget/react.html
@@ -40,7 +40,7 @@
   <script src="./index.js"></script>
 </head>
 
-<body>
+<body spellscheck="false">
   <div id="surveyElement"></div>
   <div id="surveyResultElement"></div>
 </body>
