--- a/examples_test/customWidget/survey-js-ui.html
+++ b/examples_test/customWidget/survey-js-ui.html
@@ -36,7 +36,7 @@
   <script src="./index.js"></script>
 </head>
 
-<body>
+<body spellscheck="false">
   <div id="surveyElement"></div>
   <div id="surveyResultElement"></div>
 </body>
@@ -54,7 +54,7 @@
 
 
   </head>
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
