--- a/examples_test/default/jquery-ui.html
+++ b/examples_test/default/jquery-ui.html
@@ -14,7 +14,7 @@
     <script src="../../build/survey-jquery-ui/survey-jquery-ui.min.js"></script>
     <script src="./index.js"></script>
   </head>
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
