--- a/examples_test/default/react.html
+++ b/examples_test/default/react.html
@@ -13,7 +13,7 @@
     <script src="../../build/survey-react-ui/survey-react-ui.min.js"></script>
     <script src="./index.js"></script>
   </head>
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
