--- a/examples_test/default/vue.html
+++ b/examples_test/default/vue.html
@@ -7,7 +7,7 @@
     <script src="../../build/survey-vue/survey.vue.min.js"></script>
     <script src="./index.js"></script>
   </head>
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement">
       <survey :survey="survey" />
     </div>
