--- a/examples_test/modern/vue.html
+++ b/examples_test/modern/vue.html
@@ -6,7 +6,7 @@
     <script src="../../build/survey-vue/survey.vue.min.js"></script>
     <script src="./index.js"></script>
   </head>
-  <body>
+  <body spellscheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
