--- a/packages/survey-angular-ui/example/src/index.html
+++ b/packages/survey-angular-ui/example/src/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body spellscheck="false">
   <app-root></app-root>
 </body>
 </html>
