fix typo in example html

--- a/examples/angular/index.html
+++ b/examples/angular/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body spellscheck="false">
+<body spellcheck="false">
   <ng-app></ng-app>
   <script src="./index.js"></script>
 </body>
