--- a/examples/jquery-ui/index.html
+++ b/examples/jquery-ui/index.html
@@ -15,7 +15,7 @@
     <script src="../../build/survey-jquery-ui/survey-jquery-ui.js"></script>
   </head>
 
-  <body spellscheck="false">
+  <body spellcheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
     <script src="./index.js"></script>
