--- a/examples/knockout/index.html
+++ b/examples/knockout/index.html
@@ -16,7 +16,7 @@
     <script src="../../build/survey-knockout-ui/survey-knockout-ui.js"></script>
 </head>
 
-  <body spellscheck="false">
+  <body spellcheck="false">
     <div id="surveyElement">
       <survey params="survey: model"/>
     </div>
