--- a/examples/vue/index.html
+++ b/examples/vue/index.html
@@ -13,7 +13,7 @@
     <script src="../../build/survey-vue/survey.vue.js"></script>
   </head>
 
-  <body spellscheck="false">
+  <body spellcheck="false">
     <div id="surveyElement">
       <survey :survey="survey" />
     </div>
