--- a/examples_test/bootstrap/survey-js-ui.html
+++ b/examples_test/bootstrap/survey-js-ui.html
@@ -13,7 +13,7 @@
     <script src="../../build/survey-core/plugins/bootstrap-integration/index.min.js"></script>
     <script src="../../build/survey-js-ui/survey-js-ui.min.js"></script>
   </head>
-  <body spellscheck="false">
+  <body spellcheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
