--- a/examples_test/customWidget/knockout.html
+++ b/examples_test/customWidget/knockout.html
@@ -33,7 +33,7 @@
   <script src="./index.js"></script>
 </head>
 
-<body spellscheck="false">
+<body spellcheck="false">
   <div id="surveyElement"></div>
   <div id="surveyResultElement"></div>
 </body>
