--- a/examples_test/defaultV2/knockout.html
+++ b/examples_test/defaultV2/knockout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../build/survey-knockout/defaultV2.min.css" />
     <script src="../../build/survey-knockout/survey.ko.min.js"></script>
   </head>
-  <body spellscheck="false">
+  <body spellcheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
