--- a/examples_test/modern/react.html
+++ b/examples_test/modern/react.html
@@ -12,7 +12,7 @@
     <script src="../../build/survey-react-ui/survey-react-ui.min.js"></script>
     <script src="./index.js"></script>
   </head>
-  <body spellscheck="false">
+  <body spellcheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
