--- a/examples/jquery/index.html
+++ b/examples/jquery/index.html
@@ -12,7 +12,7 @@
     <script src="../../build/survey-jquery/survey.jquery.js"></script>
   </head>
 
-  <body spellscheck="false">
+  <body spellcheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
     <script src="./index.js"></script>
