--- a/examples_test/modern/knockout.html
+++ b/examples_test/modern/knockout.html
@@ -7,7 +7,7 @@
     <script src="../../build/survey-knockout/survey.ko.min.js"></script>
     <script src="./index.js"></script>
   </head>
-  <body spellscheck="false">
+  <body spellcheck="false">
     <div id="surveyElement"></div>
     <div id="surveyResultElement"></div>
   </body>
