--- a/packages/survey-react-ui/examples_test/defaultV2/react.html
+++ b/packages/survey-react-ui/examples_test/defaultV2/react.html
@@ -13,7 +13,7 @@
   <script src="../../build/survey-react-ui.min.js"></script>
 </head>
 
-<body spellscheck="false">
+<body spellcheck="false">
   <div id="surveyElement"></div>
   <div id="surveyResultElement"></div>
 </body>
