--- a/packages/survey-vue3-ui/example/index.html
+++ b/packages/survey-vue3-ui/example/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
-  <body spellscheck="false">
+  <body spellcheck="false">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
