Fix makup tests #8764

--- a/tests/markup/snapshots/paneldynamic-remove-btn-action-bar.snap.html
+++ b/tests/markup/snapshots/paneldynamic-remove-btn-action-bar.snap.html
@@ -52,7 +52,7 @@
 								</div>
 								<div class="sv-action" id="sv-pd-add-btn">
 									<div class="sv-action__content">
-										<button class="sd-action sd-paneldynamic__add-btn sd-paneldynamic__add-btn--list-mode sd-paneldynamic__btn" type="button">
+										<button class="sd-action sd-paneldynamic__add-btn sd-paneldynamic__add-btn--list-mode sd-paneldynamic__btn" id="testid0addPanel" type="button">
 											<span>
 												<span class="sv-string-viewer">Add new</span>
 											</span>
