#8861  fix markup test Fixes #8861

--- a/tests/markup/snapshots/rating-as-dropdown-description.snap.html
+++ b/tests/markup/snapshots/rating-as-dropdown-description.snap.html
@@ -1,8 +1,8 @@
 <div class="sd-scrollable-container sd-scrollable-container--compact sd-selectbase">
 	<div class="sv-dropdown_select-wrapper">
-		<div aria-controls="testid0i_list" aria-expanded="true" aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0i" role="textbox" tabindex="0">
+		<div aria-controls="testid0i_list" aria-expanded="true" aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" role="textbox" tabindex="0">
 			<div class="sd-dropdown__value">
-				<input aria-controls="testid0i_list" aria-expanded="true" aria-label="Question title" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0i_undefined" inputmode="text" placeholder="Select..." readonly="" tabindex="-1" type="text">
+				<input aria-controls="testid0i_list" aria-expanded="true" aria-label="Question title" autocomplete="off" class="sd-dropdown__filter-string-input" inputmode="text" placeholder="Select..." readonly="" tabindex="-1" type="text">
 			</div>
 		</div>
 		<div>
@@ -15,7 +15,7 @@
 									<div class="sv-list__empty-container" style="display:none;">
 										<div aria-label="No data to display" class="sv-list__empty-text">No data to display</div>
 									</div>
-									<ul class="sv-list" id="sq_178i_list" role="listbox">
+									<ul class="sv-list" role="listbox">
 										<li aria-selected="false" class="sd-list__item sv-list__item" role="option" tabindex="-1">
 											<div class="sd-list__item-body sv-list__item-body" style="padding-inline-start:16px;" title="1">
 												<div class="sd-rating-dropdown-item">
